# rmdv

./: .gitignore  .mcp.json  AGENTS.md  Cargo.toml  LICENSE  PRODUCT.md  PROJECT_STATUS.md  README.md  img_test.md  test_data.json  test_data.toml  test_data.yaml  wrangler.jsonc
.claude/: settings.json
.claude/agents/: iced-upgrade-reviewer.md  perf-canvas-auditor.md
.claude/skills/cargo-bench-regression/: SKILL.md
.claude/skills/insta-snapshot-review/: SKILL.md
.github/workflows/: ci.yml  deploy-site.yml  release.yml
benches/: cold_start.rs
demo/: AGENTS.md  README.md  RECORDING-SCRIPT.md  tour.sh
demo/guide/features/diagrams/graphviz/: dot.md
demo/guide/features/diagrams/mermaid/: flowcharts.md
demo/guide/features/images/: gallery.md
demo/guide/features/markdown/: cjk-emphasis.md  syntax.md
demo/guide/features/math/: equations.md
demo/guide/features/mindmap/: document-mindmap.md
demo/guide/getting-started/first-steps/: quickstart.md
demo/guide/getting-started/install/linux/: install.md
demo/guide/getting-started/install/macos/: install.md
demo/papers/research/: SOURCE.md  relativity.tex
demo/projects/2026/q2/notes/: standup.md
demo/reference/api/v2/auth/: oauth.md
demo/reference/api/v2/endpoints/: users.md
demo/reference/data/: config.json  settings.yaml
docs/: BACKLOG.md  benchmarks.md  performance.md  v0.4.0-release-audit.md
docs/plans/active/: MDV-001-windows-build-verification.md  MDV-002-search-highlight-memory-bounds.md  MDV-003-image-only-pdf-feedback.md  MDV-004-full-mindmap-discoverability.md  MDV-005-zen-screenshot-coverage.md  MDV-006-stale-documentation-reconciliation.md  MDV-009-mindmap-zoom-controls-integration.md  MDV-010-local-main-reconciliation.md  README.md
docs/plans/completed/: MDV-012-impeccable-site-variant.md  MDV-013-ascii-wordmark-restoration.md  MDV-015-ascii-terminal-footer.md  MDV-016-site-shortcut-contract.md  README.md
docs/releases/: v0.5.0-content-pack.md  v0.5.0-release-notes.md  v0.6.0-content-pack.md  v0.6.0-release-notes.md
docs/status-history/: 2026-07-18-pre-control-plane-project-status.md  README.md
docs/superpowers/plans/: 2026-05-09-mdv.md  2026-05-10-v0.2-performance.md  2026-05-17-cli-agent-control.md  2026-05-23-iced-math-v0.1.md  2026-06-14-data-mindmap.md  2026-07-06-zen-edit-mode.md
docs/superpowers/specs/: 2026-05-09-mdv-design.md  2026-05-10-gpui-port-design.md  2026-05-10-v0.2-performance-design.md  2026-05-16-diagrams-design.md  2026-05-17-cli-agent-control-design.md  2026-05-23-iced-math-design.md  2026-05-30-mindmap-keyboard-and-help-design.md  2026-05-30-vault-wide-search-design.md  2026-05-31-vault-search-results-page-design.md  2026-06-14-data-mindmap-design.md  2026-06-14-kb-hints-custom-themes-design.md  2026-07-06-zen-edit-mode-design.md  2026-07-10-full-mindmap-mode-design.md
examples/: pdf_smoke.rs
scripts/: create-macos-dmg.sh
site/: 404.html  AGENTS.md  _headers  app.js  check-shortcuts.mjs  ghost.js  index.html  llms.txt  robots.txt  sitemap.xml  style.css
site/assets/: sticker-forge.LICENSE.txt  sticker-forge.NOTICE.txt  sticker-forge.es.js
src/: AGENTS.md  app.rs  ast.rs  cli.rs  cli_install.rs  config_migrate.rs  data_mindmap.rs  diagram.rs  highlight.rs  history.rs  icon.rs  keyed_body.rs  lib.rs  macos_open.rs  main.rs  md_highlight.rs  mindmap.rs  native_pinch.rs  parser.rs  pdf.rs  picker.rs  prefs.rs  recent.rs  render.rs  search.rs  tex.rs  theme.rs  theme_import.rs  theme_load.rs  theme_watch.rs  tree.rs  undo.rs  update.rs  vault_search.rs  virt.rs  watch.rs  workspace_mindmap.rs
src/ipc/: AGENTS.md  client.rs  lines.rs  mod.rs  sections.rs  server.rs  socket.rs  types.rs
tests/: AGENTS.md  ast_basic.rs  diagram_render.rs  hl_cache.rs  hot_reload_smoke.sh  ipc_e2e.rs  ipc_protocol.rs  parser_diagrams.rs  parser_snapshots.rs  search_basic.rs  tex_snapshots.rs  virtual_scroll.rs
tests/fixtures/: diagrams_stress.md  paper.tex  sections.md
tests/snapshots/: parser_snapshots__gfm.snap  tex_snapshots__paper.snap
