[package]
name = "rmdv"
version = "0.5.0"
edition = "2021"
rust-version = "1.80"
description = "Lightweight beautiful markdown viewer"
license = "MIT"
repository = "https://github.com/minchenlee/rmdv"
build = "build.rs"

[dependencies]
iced = { version = "0.14", features = ["tokio", "image", "advanced", "svg", "lazy", "canvas"] }
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
notify = "7"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
open = "5"
arboard = "3"
dirs = "5"
dark-light = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
resvg = { version = "0.45", default-features = false, features = ["text", "system-fonts"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
toml = "0.8"
anyhow = "1"
tree-sitter = "0.24"
streaming-iterator = "0.1"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-sequel = "=0.3.7"
tree-sitter-bash = "0.23"
tree-sitter-json = "0.24"
tree-sitter-html = "0.23"
tree-sitter-md = "0.3"
tree-sitter-yaml = "0.7"
tree-sitter-toml-ng = "0.7"
mermaid-rs-renderer = { git = "https://github.com/zed-industries/mermaid-rs-renderer", rev = "782b89a7da3f0e91e51f98d00a93acba679be6fb" }
layout-rs = "0.1"
iced_math = "0.5"
lru = "0.12"
clap = { version = "4", features = ["derive"] }
interprocess = { version = "2", features = ["tokio"] }
futures = "0.3"
libc = "0.2"
# Spike: optional PDF->markdown via liteparse (PDFium, local-only).
# default-features=false drops Tesseract OCR (no cmake C build, no bloat);
# scanned image-only PDFs won't yield text, but native-text PDFs work.
liteparse = { version = "2", optional = true, default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
# Iced 0.14 currently drops Winit's macOS `PinchGesture`; this is the narrow
# AppKit bridge used to forward magnification deltas back into the app.
block2 = "0.6"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSEvent", "block2"] }

[features]
# `pdf` is on by default so `.pdf` files render as markdown out of the box
# (cargo run / installed app). Build with `--no-default-features` to drop it
# and the ~6MB PDFium dylib if a leaner, PDF-less binary is wanted.
default = ["pdf"]
# Enables reading .pdf files (extracted to markdown). Pulls in PDFium (~6MB,
# dlopen'd at runtime; CI embeds + signs it into the .app bundle).
pdf = ["dep:liteparse"]

[lib]
name = "rmdv"
path = "src/lib.rs"

[[bin]]
name = "rmdv"
path = "src/main.rs"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
criterion = { version = "0.5", default-features = false, features = ["rayon"] }

[[bench]]
name = "cold_start"
harness = false

[package.metadata.packager]
product-name = "rmdv"
identifier = "com.minchenlee.rmdv"
description = "Lightweight beautiful markdown viewer"
authors = ["minchenlee"]
icons = ["assets/icon.icns", "assets/icon.ico", "assets/icon.png"]
category = "Utility"
homepage = "https://github.com/minchenlee/rmdv"
file-associations = [
    { extensions = ["md", "markdown", "mdown", "mkdn", "mkd"], name = "Markdown document", role = "editor" },
    { extensions = ["txt", "text"], name = "Plain text document", role = "editor" },
    { extensions = ["json", "yaml", "yml", "toml"], name = "Structured text document", role = "editor" },
    { extensions = ["tex"], name = "LaTeX document", role = "editor" },
]

[package.metadata.packager.macos]
minimum-system-version = "10.13"

[package.metadata.packager.nsis]
installer-mode = "currentUser"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
